# NHERI_competition_2026

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 00_quickstart.ipynb
scripts/: bootstrap_env.sh
src/hcdt/: __init__.py
src/hcdt/analysis/: __init__.py
src/hcdt/data/: __init__.py  _loading.py  ian.py  michael.py  schemas.py
src/hcdt/dtwin/: __init__.py  graph_model.py  policy.py
tests/: __init__.py  test_data_loaders.py  test_data_schemas.py  test_dtwin.py  test_hcdt.py
