[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcdt-multihazard-dtwin"
version = "0.1.0"
description = "Human-centered digital twin for multihazard research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "geopandas",
    "numpy",
    "networkx",
    "pydantic",
    "matplotlib",
    "seaborn",
    "pyproj",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hcdt"]
